Fixed alignment for activity filters container on 'Activity Feeds & Tasks' tab

--- a/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/ActivityFeedList/ActivityFeedList.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/ActivityFeedList/ActivityFeedList.less
@@ -28,8 +28,6 @@
     position: sticky;
     top: 0;
     padding: 0px;
-    margin-left: 8px;
-    margin-right: 8px;
     z-index: 10000;
     border-bottom: 1px solid @border-color;
   }
